--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <packaging>war</packaging>
+    <!--<packaging>war</packaging>-->
 
     <name>server</name>
     <description>Demo project for Spring Boot</description>
